--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,25 +1,19 @@
+$primary-color: #6a3f6b;
+
 .page {
-  display: grid;
-  align-items: center;
-  justify-items: center;
-  padding: 20px 5px;
-}
-
-.main {
   display: flex;
-  flex-direction: column;
-  gap: 32px;
-  grid-row-start: 2;
-  height: calc(100vh - 40px);
-}
-
-@media (max-width: 800px) {
-  .page {
-    overflow-x: auto;
-    width: 100%;
-  }
+  justify-content: center;
 
   .main {
-    align-items: center;
+    height: 100vh;
+    padding: 25px;
+
+    h1 {
+      color: $primary-color;
+      font-family: 'Roboto', sans-serif;
+      font-size: 20px;
+      margin-bottom: 25px;
+      text-transform: uppercase;
+    }
   }
 }
