--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -105,10 +105,6 @@ $placeholder-color: #6f6a6a;
 }
 
 .ant-table-filter-dropdown  {
-  & > div {
-    padding: 8;
-  }
-
   input {
     display: block;
     margin-bottom: 8px;
@@ -219,5 +215,17 @@ $placeholder-color: #6f6a6a;
     .main {
       padding: 25px 15px;
     }
+  }
+}
+
+@media (min-width: 369px) and (max-width: 382px) {
+  .ant-pagination {
+    bottom: 0px;
+  }
+}
+
+@media (max-width: 368px) {
+  .ant-pagination {
+    bottom: -45px;
   }
 }
